--- a/public/q3/q3ge2.css
+++ b/public/q3/q3ge2.css
@@ -1,6 +1,8 @@
 body{
-    background-color: rgb(255, 235, 239);
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(255, 235, 239);
 }
+
 
 nav {
     margin: 0;
