--- a/public/q3/q3ge2.css
+++ b/public/q3/q3ge2.css
@@ -13,6 +13,10 @@ nav {
     padding: 0;
   }
 
+  h1{
+    margin-left: 40vw;
+    animation: fadeInUp 2s;
+  }
   .navbar a {
     float: left;
     font-size: 16px;
@@ -22,9 +26,39 @@ nav {
     text-decoration: none;
   }
 
+  .box {
+    border-radius: 15px;
+    box-sizing: 40vw 40vw 40vw 40vw;
+    width: 20vw;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vw;
+    margin-left: 40vw;
+    background-color: white;
+  }
 
+  .filterz{
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
   input:focus{
-    color:rgb(190, 215, 226);
+    color:rgb(138, 168, 113);
 
+  }
+
+  .box {
+    animation: fadeInUp 2s;
+    }
+
+    @keyframes fadeInUp {
+      from {
+          opacity: 0;
+          transform: translateY(20%);
+      }
+      to {
+          opacity: 1;
+          transform: translateY(0);
+      }
   }
